--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "parcel": "^2.15.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^6.22.3",
     "shimmer": "^1.2.1"
   }
 }
