--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/gsaikumar-123/MealMatch#readme",
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
     "parcel": "^2.15.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.22.3",
-    "shimmer": "^1.2.1"
+    "shimmer": "^1.2.1",
+    "tailwindcss": "^4.1.8"
   }
 }
